[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/close_icon.png" type="Texture" id=1]
[ext_resource path="res://GUI/close_icon_clicked.png" type="Texture" id=2]
[ext_resource path="res://GUI/info_robot/info_repaired_robot/sprites/robot_info_panel.png" type="Texture" id=3]
[ext_resource path="res://GUI/info_robot/info_repaired_robot/info_robot.gd" type="Script" id=4]
[ext_resource path="res://font/bold_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://GUI/strength_logo.png" type="Texture" id=6]
[ext_resource path="res://GUI/water_logo.png" type="Texture" id=7]
[ext_resource path="res://GUI/info_robot/info_repaired_robot/sprites/robot_info_panel_masked.png" type="Texture" id=9]

[node name="info_robot" type="Control"]
pause_mode = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
margin_left = -0.850952
margin_top = -0.850922
margin_right = 1919.15
margin_bottom = 1079.15
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_button" type="TextureButton" parent="."]
pause_mode = 2
margin_left = 1862.45
margin_top = 8.90176
margin_right = 1909.45
margin_bottom = 56.9018
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texts" type="VBoxContainer" parent="."]
margin_left = 977.0
margin_top = 172.0
margin_right = 1561.0
margin_bottom = 900.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="texts"]
margin_right = 584.0
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_1" type="Label" parent="texts/HBoxContainer"]
margin_top = 4.0
margin_right = 400.0
margin_bottom = 32.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 5 )
text = "transform into combat robot"
align = 1

[node name="strength_logo" type="TextureRect" parent="texts/HBoxContainer"]
margin_left = 404.0
margin_right = 441.0
margin_bottom = 37.0
texture = ExtResource( 6 )

[node name="price_1" type="Label" parent="texts/HBoxContainer"]
margin_left = 445.0
margin_top = 4.0
margin_right = 485.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = ExtResource( 5 )
text = "12"
align = 1

[node name="button_margin_1" type="MarginContainer" parent="texts/HBoxContainer"]
margin_left = 489.0
margin_right = 519.0
margin_bottom = 37.0
rect_min_size = Vector2( 30, 0 )

[node name="buy_1" type="TextureButton" parent="texts/HBoxContainer"]
pause_mode = 2
margin_left = 523.0
margin_right = 560.0
margin_bottom = 37.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="texts"]
margin_top = 41.0
margin_right = 584.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 65 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="texts"]
margin_top = 110.0
margin_right = 584.0
margin_bottom = 147.0

[node name="text_2" type="Label" parent="texts/HBoxContainer2"]
margin_top = 4.0
margin_right = 400.0
margin_bottom = 32.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 5 )
text = "strong arms"
align = 1

[node name="strength_logo2" type="TextureRect" parent="texts/HBoxContainer2"]
margin_left = 404.0
margin_right = 441.0
margin_bottom = 37.0
texture = ExtResource( 6 )

[node name="price_2" type="Label" parent="texts/HBoxContainer2"]
margin_left = 445.0
margin_top = 4.0
margin_right = 485.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = ExtResource( 5 )
text = "12"
align = 1

[node name="button_margin_2" type="MarginContainer" parent="texts/HBoxContainer2"]
margin_left = 489.0
margin_right = 519.0
margin_bottom = 37.0
rect_min_size = Vector2( 30, 0 )

[node name="buy_2" type="TextureButton" parent="texts/HBoxContainer2"]
margin_left = 523.0
margin_right = 560.0
margin_bottom = 37.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[node name="MarginContainer2" type="MarginContainer" parent="texts"]
margin_top = 151.0
margin_right = 584.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 65 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer3" type="HBoxContainer" parent="texts"]
margin_top = 220.0
margin_right = 584.0
margin_bottom = 257.0

[node name="text_3" type="Label" parent="texts/HBoxContainer3"]
margin_top = 4.0
margin_right = 400.0
margin_bottom = 32.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 5 )
text = "cutting finger"
align = 1

[node name="strength_logo3" type="TextureRect" parent="texts/HBoxContainer3"]
margin_left = 404.0
margin_right = 441.0
margin_bottom = 37.0
texture = ExtResource( 6 )

[node name="price_3" type="Label" parent="texts/HBoxContainer3"]
margin_left = 445.0
margin_top = 4.0
margin_right = 485.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = ExtResource( 5 )
text = "12"
align = 1

[node name="button_margin_3" type="MarginContainer" parent="texts/HBoxContainer3"]
margin_left = 489.0
margin_right = 519.0
margin_bottom = 37.0
rect_min_size = Vector2( 30, 0 )

[node name="buy_3" type="TextureButton" parent="texts/HBoxContainer3"]
margin_left = 523.0
margin_right = 560.0
margin_bottom = 37.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[node name="MarginContainer3" type="MarginContainer" parent="texts"]
margin_top = 261.0
margin_right = 584.0
margin_bottom = 326.0
rect_min_size = Vector2( 0, 65 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer4" type="HBoxContainer" parent="texts"]
margin_top = 330.0
margin_right = 584.0
margin_bottom = 367.0

[node name="text_4" type="Label" parent="texts/HBoxContainer4"]
margin_top = 4.0
margin_right = 400.0
margin_bottom = 32.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 5 )
text = "object compartiment"
align = 1

[node name="strength_logo4" type="TextureRect" parent="texts/HBoxContainer4"]
margin_left = 404.0
margin_right = 441.0
margin_bottom = 37.0
texture = ExtResource( 6 )

[node name="price_4" type="Label" parent="texts/HBoxContainer4"]
margin_left = 445.0
margin_top = 4.0
margin_right = 485.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = ExtResource( 5 )
text = "12"
align = 1

[node name="button_margin_4" type="MarginContainer" parent="texts/HBoxContainer4"]
margin_left = 489.0
margin_right = 519.0
margin_bottom = 37.0
rect_min_size = Vector2( 30, 0 )

[node name="buy_4" type="TextureButton" parent="texts/HBoxContainer4"]
margin_left = 523.0
margin_right = 560.0
margin_bottom = 37.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[node name="MarginContainer4" type="MarginContainer" parent="texts"]
margin_top = 371.0
margin_right = 584.0
margin_bottom = 436.0
rect_min_size = Vector2( 0, 65 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer5" type="HBoxContainer" parent="texts"]
margin_top = 440.0
margin_right = 584.0
margin_bottom = 477.0

[node name="text_5" type="Label" parent="texts/HBoxContainer5"]
margin_top = 4.0
margin_right = 400.0
margin_bottom = 32.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 5 )
text = "compost making"
align = 1

[node name="strength_logo5" type="TextureRect" parent="texts/HBoxContainer5"]
margin_left = 404.0
margin_right = 441.0
margin_bottom = 37.0
texture = ExtResource( 6 )

[node name="price_5" type="Label" parent="texts/HBoxContainer5"]
margin_left = 445.0
margin_top = 4.0
margin_right = 485.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = ExtResource( 5 )
text = "12"
align = 1

[node name="button_margin_5" type="MarginContainer" parent="texts/HBoxContainer5"]
margin_left = 489.0
margin_right = 519.0
margin_bottom = 37.0
rect_min_size = Vector2( 30, 0 )

[node name="buy_5" type="TextureButton" parent="texts/HBoxContainer5"]
margin_left = 523.0
margin_right = 560.0
margin_bottom = 37.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[node name="MarginContainer5" type="MarginContainer" parent="texts"]
margin_top = 481.0
margin_right = 584.0
margin_bottom = 549.0
rect_min_size = Vector2( 0, 68 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer6" type="HBoxContainer" parent="texts"]
margin_top = 553.0
margin_right = 584.0
margin_bottom = 590.0

[node name="text_6" type="Label" parent="texts/HBoxContainer6"]
margin_top = 4.0
margin_right = 400.0
margin_bottom = 32.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 5 )
text = "pet"
align = 1

[node name="strength_logo6" type="TextureRect" parent="texts/HBoxContainer6"]
margin_left = 404.0
margin_right = 441.0
margin_bottom = 37.0
texture = ExtResource( 6 )

[node name="price_6" type="Label" parent="texts/HBoxContainer6"]
margin_left = 445.0
margin_top = 4.0
margin_right = 485.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = ExtResource( 5 )
text = "12"
align = 1

[node name="button_margin_6" type="MarginContainer" parent="texts/HBoxContainer6"]
margin_left = 489.0
margin_right = 519.0
margin_bottom = 37.0
rect_min_size = Vector2( 30, 0 )

[node name="buy_6" type="TextureButton" parent="texts/HBoxContainer6"]
margin_left = 523.0
margin_right = 560.0
margin_bottom = 37.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[node name="MarginContainer6" type="MarginContainer" parent="texts"]
margin_top = 594.0
margin_right = 584.0
margin_bottom = 664.0
rect_min_size = Vector2( 0, 70 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer7" type="HBoxContainer" parent="texts"]
margin_top = 668.0
margin_right = 584.0
margin_bottom = 705.0

[node name="text_7" type="Label" parent="texts/HBoxContainer7"]
margin_top = 4.0
margin_right = 400.0
margin_bottom = 32.0
rect_min_size = Vector2( 400, 0 )
custom_fonts/font = ExtResource( 5 )
text = "transform into support robot"
align = 1

[node name="strength_logo7" type="TextureRect" parent="texts/HBoxContainer7"]
margin_left = 404.0
margin_right = 441.0
margin_bottom = 37.0
texture = ExtResource( 6 )

[node name="price_7" type="Label" parent="texts/HBoxContainer7"]
margin_left = 445.0
margin_top = 4.0
margin_right = 485.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = ExtResource( 5 )
text = "12"
align = 1

[node name="button_margin_7" type="MarginContainer" parent="texts/HBoxContainer7"]
margin_left = 489.0
margin_right = 519.0
margin_bottom = 37.0
rect_min_size = Vector2( 30, 0 )

[node name="buy_7" type="TextureButton" parent="texts/HBoxContainer7"]
margin_left = 523.0
margin_right = 560.0
margin_bottom = 37.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )

[node name="container1" type="TextureRect" parent="."]
margin_left = 947.45
margin_top = 144.902
margin_right = 1561.45
margin_bottom = 227.902
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container2" type="TextureRect" parent="."]
margin_left = 947.45
margin_top = 256.902
margin_right = 1561.45
margin_bottom = 339.902
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container3" type="TextureRect" parent="."]
margin_left = 947.45
margin_top = 369.902
margin_right = 1561.45
margin_bottom = 452.902
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container4" type="TextureRect" parent="."]
margin_left = 947.45
margin_top = 593.902
margin_right = 1561.45
margin_bottom = 676.902
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container5" type="TextureRect" parent="."]
margin_left = 947.45
margin_top = 705.902
margin_right = 1561.45
margin_bottom = 788.902
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container6" type="TextureRect" parent="."]
margin_left = 947.45
margin_top = 817.902
margin_right = 1561.45
margin_bottom = 900.902
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="make_fertilizer" type="TextureButton" parent="."]
margin_left = 247.448
margin_top = 137.96
margin_right = 294.448
margin_bottom = 185.96
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="make_fertilizer"]
margin_left = -32.0
margin_top = -16.0
margin_right = 63.0
margin_bottom = -2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "make_fertilizer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container_product" type="TextureButton" parent="."]
margin_left = 340.0
margin_top = 318.0
margin_right = 459.0
margin_bottom = 440.0
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="number_of_poop" type="Label" parent="."]
margin_left = 296.0
margin_top = 320.0
margin_right = 336.0
margin_bottom = 334.0
custom_fonts/font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="texts/HBoxContainer/buy_1" to="." method="_on_buy_1_pressed"]
[connection signal="pressed" from="texts/HBoxContainer2/buy_2" to="." method="_on_buy_2_pressed"]
[connection signal="pressed" from="texts/HBoxContainer3/buy_3" to="." method="_on_buy_3_pressed"]
[connection signal="pressed" from="texts/HBoxContainer4/buy_4" to="." method="_on_buy_4_pressed"]
[connection signal="pressed" from="texts/HBoxContainer5/buy_5" to="." method="_on_buy_5_pressed"]
[connection signal="pressed" from="texts/HBoxContainer6/buy_6" to="." method="_on_buy_6_pressed"]
[connection signal="pressed" from="texts/HBoxContainer7/buy_7" to="." method="_on_buy_7_pressed"]
[connection signal="pressed" from="make_fertilizer" to="." method="_on_make_fertilizer_pressed"]
[connection signal="pressed" from="container_product" to="." method="_on_container_product_pressed"]
